update membuat pandas series

--- a/1. Membuat Pandas Series.ipynb
+++ b/1. Membuat Pandas Series.ipynb
@@ -296,30 +296,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# memakai index berupa string\n",
+    "index = ['Jeff Bezos', 'Elon Musk', 'Bernard Arnault', 'Bill Gates', 'Mark Zuckerberg',\\\n",
+    "           'Warren Buffet', 'Larry Ellison', 'Larry Page', 'Sergey Brin', 'Mukesh Ambani']\n",
+    "\n",
     "umur_pengusaha = pd.Series(\n",
     "    [57, 49, 72, 65, 36, 90, 76, 48, 47, 63],\n",
-    "    index=list(range(1, 11)),\n",
+    "    index=index,\n",
     "    name='umur_pengusaha'\n",
     ")\n",
     "\n",
     "negara_asal = pd.Series(\n",
     "    ['Amerika Serikat', 'Amerika Serikat', 'Perancis', 'Amerika Serikat', 'Amerika Serikat',\\\n",
     "     'Amerika Serikat', 'Amerika Serikat', 'Amerika Serikat', 'Amerika Serikat', 'India'],\n",
-    "    index=list(range(1, 11)),\n",
+    "    index=index,\n",
     "    name='negara_asal'\n",
     ")\n",
     "\n",
     "total_kekayaan = pd.Series(\n",
     "    [177_000_000_000_000, 151_000_000_000_000, 150_000_000_000_000, 124_000_000_000_000, 97_000_000_000_000,\\\n",
     "     96_000_000_000_000, 93_000_000_000_000, 91_500_000_000_000, 89_000_000_000_000, 84_500_000_000_000],\n",
-    "    index=list(range(1, 11)),\n",
+    "    index=index,\n",
     "    name='total_kekayaan'\n",
     ")\n",
     "\n",
     "nama_perusahaan = pd.Series(\n",
     "    ['Amazon', 'Tesla, SpaceX', 'LVMH', 'Microsoft', 'Meta Platforms',\\\n",
     "     'Berkshire Hathaway', 'Oracle Corporation', 'Alphabet Inc.', 'Alphabet Inc.', 'Reliance Industries'],\n",
-    "    index=list(range(1, 11)),\n",
+    "    index=index,\n",
     "    name='nama_perusahaan'\n",
     ")"
    ]
@@ -341,16 +345,16 @@
     {
      "data": {
       "text/plain": [
-       "1     57\n",
-       "2     49\n",
-       "3     72\n",
-       "4     65\n",
-       "5     36\n",
-       "6     90\n",
-       "7     76\n",
-       "8     48\n",
-       "9     47\n",
-       "10    63\n",
+       "Jeff Bezos         57\n",
+       "Elon Musk          49\n",
+       "Bernard Arnault    72\n",
+       "Bill Gates         65\n",
+       "Mark Zuckerberg    36\n",
+       "Warren Buffet      90\n",
+       "Larry Ellison      76\n",
+       "Larry Page         48\n",
+       "Sergey Brin        47\n",
+       "Mukesh Ambani      63\n",
        "Name: umur_pengusaha, dtype: int64"
       ]
      },
@@ -372,16 +376,16 @@
     {
      "data": {
       "text/plain": [
-       "1     Amerika Serikat\n",
-       "2     Amerika Serikat\n",
-       "3            Perancis\n",
-       "4     Amerika Serikat\n",
-       "5     Amerika Serikat\n",
-       "6     Amerika Serikat\n",
-       "7     Amerika Serikat\n",
-       "8     Amerika Serikat\n",
-       "9     Amerika Serikat\n",
-       "10              India\n",
+       "Jeff Bezos         Amerika Serikat\n",
+       "Elon Musk          Amerika Serikat\n",
+       "Bernard Arnault           Perancis\n",
+       "Bill Gates         Amerika Serikat\n",
+       "Mark Zuckerberg    Amerika Serikat\n",
+       "Warren Buffet      Amerika Serikat\n",
+       "Larry Ellison      Amerika Serikat\n",
+       "Larry Page         Amerika Serikat\n",
+       "Sergey Brin        Amerika Serikat\n",
+       "Mukesh Ambani                India\n",
        "Name: negara_asal, dtype: object"
       ]
      },
@@ -403,16 +407,16 @@
     {
      "data": {
       "text/plain": [
-       "1     177000000000000\n",
-       "2     151000000000000\n",
-       "3     150000000000000\n",
-       "4     124000000000000\n",
-       "5      97000000000000\n",
-       "6      96000000000000\n",
-       "7      93000000000000\n",
-       "8      91500000000000\n",
-       "9      89000000000000\n",
-       "10     84500000000000\n",
+       "Jeff Bezos         177000000000000\n",
+       "Elon Musk          151000000000000\n",
+       "Bernard Arnault    150000000000000\n",
+       "Bill Gates         124000000000000\n",
+       "Mark Zuckerberg     97000000000000\n",
+       "Warren Buffet       96000000000000\n",
+       "Larry Ellison       93000000000000\n",
+       "Larry Page          91500000000000\n",
+       "Sergey Brin         89000000000000\n",
+       "Mukesh Ambani       84500000000000\n",
        "Name: total_kekayaan, dtype: int64"
       ]
      },
@@ -436,16 +440,16 @@
     {
      "data": {
       "text/plain": [
-       "1                  Amazon\n",
-       "2           Tesla, SpaceX\n",
-       "3                    LVMH\n",
-       "4               Microsoft\n",
-       "5          Meta Platforms\n",
-       "6      Berkshire Hathaway\n",
-       "7      Oracle Corporation\n",
-       "8           Alphabet Inc.\n",
-       "9           Alphabet Inc.\n",
-       "10    Reliance Industries\n",
+       "Jeff Bezos                      Amazon\n",
+       "Elon Musk                Tesla, SpaceX\n",
+       "Bernard Arnault                   LVMH\n",
+       "Bill Gates                   Microsoft\n",
+       "Mark Zuckerberg         Meta Platforms\n",
+       "Warren Buffet       Berkshire Hathaway\n",
+       "Larry Ellison       Oracle Corporation\n",
+       "Larry Page               Alphabet Inc.\n",
+       "Sergey Brin              Alphabet Inc.\n",
+       "Mukesh Ambani      Reliance Industries\n",
        "Name: nama_perusahaan, dtype: object"
       ]
      },
