--- a/1. Membuat Pandas Series.ipynb
+++ b/1. Membuat Pandas Series.ipynb
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "pd.Series(['Jeff Bezos', 'Elon Musk', 'Bernard Arnault', 'Bill Gates', 'Mark Zuckerberg',\\\n",
+    "pd.Series(['Jeff Bezos', 'Elon Musk', 'Bernard Arnault', 'Bill Gates', 'Mark Zuckerberg',\n",
     "           'Warren Buffet', 'Larry Ellison', 'Larry Page', 'Sergey Brin', 'Mukesh Ambani'])"
    ]
   },
@@ -229,10 +229,10 @@
     }
    ],
    "source": [
-    "data = ['Jeff Bezos', 'Elon Musk', 'Bernard Arnault', 'Bill Gates', 'Mark Zuckerberg',\\\n",
-    "        'Warren Buffet', 'Larry Ellison', 'Larry Page', 'Sergey Brin', 'Mukesh Ambani']\n",
+    "data_nama_pengusaha = ['Jeff Bezos', 'Elon Musk', 'Bernard Arnault', 'Bill Gates', 'Mark Zuckerberg',\n",
+    "                       'Warren Buffet', 'Larry Ellison', 'Larry Page', 'Sergey Brin', 'Mukesh Ambani']\n",
     "\n",
-    "pd.Series(data, index=list(range(1, 11)), dtype='string', name='nama_pengusaha')"
+    "pd.Series(data_nama_pengusaha, index=range(1, 11), dtype='string', name='nama_pengusaha')"
    ]
   },
   {
@@ -277,7 +277,7 @@
     }
    ],
    "source": [
-    "nama_pengusaha = pd.Series(data, index=list(range(1, 11)), dtype='string', name='nama_pengusaha')\n",
+    "nama_pengusaha = pd.Series(data_nama_pengusaha, index=range(1, 11), dtype='string', name='nama_pengusaha')\n",
     "nama_pengusaha"
    ]
   },
@@ -297,8 +297,8 @@
    "outputs": [],
    "source": [
     "# memakai index berupa string\n",
-    "index = ['Jeff Bezos', 'Elon Musk', 'Bernard Arnault', 'Bill Gates', 'Mark Zuckerberg',\\\n",
-    "           'Warren Buffet', 'Larry Ellison', 'Larry Page', 'Sergey Brin', 'Mukesh Ambani']\n",
+    "index = ['Jeff Bezos', 'Elon Musk', 'Bernard Arnault', 'Bill Gates', 'Mark Zuckerberg',\n",
+    "         'Warren Buffet', 'Larry Ellison', 'Larry Page', 'Sergey Brin', 'Mukesh Ambani']\n",
     "\n",
     "umur_pengusaha = pd.Series(\n",
     "    [57, 49, 72, 65, 36, 90, 76, 48, 47, 63],\n",
@@ -307,25 +307,28 @@
     ")\n",
     "\n",
     "negara_asal = pd.Series(\n",
-    "    ['Amerika Serikat', 'Amerika Serikat', 'Perancis', 'Amerika Serikat', 'Amerika Serikat',\\\n",
+    "    ['Amerika Serikat', 'Amerika Serikat', 'Perancis', 'Amerika Serikat', 'Amerika Serikat',\n",
     "     'Amerika Serikat', 'Amerika Serikat', 'Amerika Serikat', 'Amerika Serikat', 'India'],\n",
     "    index=index,\n",
     "    name='negara_asal'\n",
     ")\n",
     "\n",
-    "total_kekayaan = pd.Series(\n",
-    "    [177_000_000_000_000, 151_000_000_000_000, 150_000_000_000_000, 124_000_000_000_000, 97_000_000_000_000,\\\n",
-    "     96_000_000_000_000, 93_000_000_000_000, 91_500_000_000_000, 89_000_000_000_000, 84_500_000_000_000],\n",
-    "    index=index,\n",
-    "    name='total_kekayaan'\n",
-    ")\n",
+    "# memakai dict untuk mendefinisikan sekaligus data dan index\n",
+    "data_total_kekayaan = {'Jeff Bezos':177000000000000, 'Elon Musk':151000000000000,\n",
+    "                       'Bernard Arnault':150000000000000, 'Bill Gates':124000000000000,\n",
+    "                       'Mark Zuckerberg':97000000000000, 'Warren Buffet':96000000000000,\n",
+    "                       'Larry Ellison':93000000000000, 'Larry Page':91500000000000,\n",
+    "                       'Sergey Brin':89000000000000, 'Mukesh Ambani':84500000000000}\n",
     "\n",
-    "nama_perusahaan = pd.Series(\n",
-    "    ['Amazon', 'Tesla, SpaceX', 'LVMH', 'Microsoft', 'Meta Platforms',\\\n",
-    "     'Berkshire Hathaway', 'Oracle Corporation', 'Alphabet Inc.', 'Alphabet Inc.', 'Reliance Industries'],\n",
-    "    index=index,\n",
-    "    name='nama_perusahaan'\n",
-    ")"
+    "data_nama_perusahaan = {'Jeff Bezos':'Amazon', 'Elon Musk':'Tesla, SpaceX',\n",
+    "                        'Bernard Arnault':'LVMH', 'Bill Gates':'Microsoft',\n",
+    "                        'Mark Zuckerberg':'Meta Platforms', 'Warren Buffet':'Berkshire Hathaway',\n",
+    "                        'Larry Ellison':'Oracle Corporation', 'Larry Page':'Alphabet Inc.',\n",
+    "                        'Sergey Brin':'Alphabet Inc.', 'Mukesh Ambani':'Reliance Industries'}\n",
+    "\n",
+    "total_kekayaan = pd.Series(data_total_kekayaan, name='total_kekayaan')\n",
+    "\n",
+    "nama_perusahaan = pd.Series(data_nama_perusahaan, name='nama_perusahaan')"
    ]
   },
   {
